      be a way of fixing said mentions.  Thanks to Robert Luberda
      for reporting the bug.  (Closes: #802964)
  * checks/debhelper.{desc,pm}:
    + [JW] Apply patch from Chris Lamb to check for common typos in
      debian/rules target names.  (Closes: #832096)
    + [JW, NT] Add some more (indirect) "dh" build-systems.
      (Closes: #828773)
  * checks/files.desc:
    + [JW] Fix typos.
  * checks/infofiles.desc:
    + [JW] Fix typo.
  * checks/java.pm:
    + [JW] Don't emit javalib-but-no-public-jars for transitional packages.
      Thanks to Jeremy Bicha for the bug report.  (Closes: #829047)
  * checks/manpages.desc:
    + [JW] Fix typos.
  * checks/phppear.desc:
    + [JW] Fix typos.
  * checks/scripts.pm:
    + [JW] Fix false positive unusual-interpreter when the script had
      "#!/usr/bin/env" shebang and the interpreter was shipped in the same
      package.  Thanks to Sergio Durigan Junior for the bug report and the
      initial patch.  (Closes: #828933)
  * checks/shared-libs.desc:
    + [JW] Fix typo.
  * checks/systemd.{desc,pm}:
    + [JW] Fix typos.
    + [JW, NT] Apply from Chris Lamb to check for a possibly missing
      "WantedBy" target in service files.  (Closes: #832771)
    + [JW, NT] Improve wording about the "systemd" sequence of a tag.
  * checks/watch-file.desc:
    + [JW] Fix typo.

  * collection/*:
    + [JW,NT] Remove "." from Perl's search path.  (Mitigates: #588017)

  * commands/lintian:
    + [NT,JW] Remove "." from Perl's search path.  (Mitigates: #588017)
  * commands/reporting-html-reports.pm:
    + [NT] Fix typo in named parameter that made the raw lintain.log
      unavailable on lintian.debian.org.  Thanks to Guillem Jover
      for reporting the issue.  (Closes: #828719)
    + [NT] Install the lintian log file as a resource so it can be
      handled (e.g. cached) like other resources.

  * data/common/source-fields:
    + [NT] Apply patch from Edward Betts to add Testsuite-Triggers as