@@ -1,27 +1,0 @@
-Source: {$source}
-Priority: extra
-Section: {$section}
-Maintainer: {$author}
-Standards-Version: {$standards_version}
-Build-Depends: debhelper (>= 9)
-
-Package: pkg-optional
-Architecture: all
-Priority: optional
-Depends: $\{misc:Depends\}, pkg-extra
-Description: {$description} - pkg-optional
- This is a test package designed to exercise some feature or tag of
- Lintian.  It is part of the Lintian test suite and may do very odd
- things.  It should not be installed like a regular package.
- .
- optional.
-
-Package: pkg-extra
-Architecture: all
-Depends: $\{misc:Depends\}
-Description: {$description} - pkg-extra
- This is a test package designed to exercise some feature or tag of
- Lintian.  It is part of the Lintian test suite and may do very odd
- things.  It should not be installed like a regular package.
- .
- extra.
