@@ -1,9 +1,0 @@
-#!/usr/bin/make -f
-
-%:
-	dh $@
-
-override_dh_installdocs:
-	for P in $$(dh_listpackages) ; do \
-		dh_installdocs -p$$P some-doc.txt || exit 1 ;\
-	 done
